tests/parser/bug_55/invalid_1.m.out
In invalid_1.m, line 7
|      properties
|      ^^^^^^^^^^ error: expected IDENTIFIER, found KEYWORD instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
