tests/parser/bug_55/invalid_1.m
% (c) 2019 Florian Schanda

classdef invalid_1

  properties
     x
     properties
  end

end
